[tool.poetry]
name = "astroheads"
version = "0.0.1"
description = "Astro Heads NFT"
authors = ["Lukas Bures <burylukas@seznam.cz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
web3 = "^5.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.7"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"